--- a/app/src/main/res/layout/static_rv_item.xml
+++ b/app/src/main/res/layout/static_rv_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="100dp"
-    android:layout_height="match_parent"
+    android:layout_height="130dp"
     android:id="@+id/linearLayout"
     android:layout_marginTop="20dp"
     android:layout_marginRight="10dp"
@@ -10,7 +10,7 @@
     android:elevation="2dp"
     android:orientation="vertical">
 
-    <ImageView
+     <ImageView
         android:id="@+id/image"
         android:layout_width="100dp"
         android:layout_height="100dp"
