--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="20dp"
+                android:fontFamily="@font/kanit"
                 android:text="Username"
                 android:textColor="#FFFFFF"
                 android:textSize="22dp"
@@ -68,8 +69,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="270dp"
                 android:layout_marginLeft="10dp"
+                android:layout_marginTop="270dp"
+                android:fontFamily="@font/kanit"
                 android:text="Categoties"
                 android:textSize="22dp" />
 
@@ -91,6 +93,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="480dp"
+                android:fontFamily="@font/kanit"
                 android:text="Product list"
                 android:textSize="22dp" />
 
