--- a/app/src/main/res/layout/activity_listitem_category.xml
+++ b/app/src/main/res/layout/activity_listitem_category.xml
@@ -48,20 +48,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.054" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_listitemcategory"
-        android:layout_width="match_parent"
-        android:layout_height="670dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="170dp"
-        android:layout_marginRight="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.466"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.113" />
-
     <TextView
         android:id="@+id/categoryTitle"
         android:layout_width="wrap_content"
@@ -74,5 +60,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.134" />
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_listitemcategory"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="170dp"
+            android:layout_marginRight="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.466"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.113" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
