--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -8,4 +8,9 @@
         android:id="@+id/loginFragment"
         android:title="เข้าสู่ระบบ/ลงทะเบียน" />
 
+    <item
+        android:id="@+id/logout"
+        android:title="ออกจากระบบ"
+        android:visible="false" />
+
 </menu>
