--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -44,7 +44,7 @@
             app:layout_constraintHorizontal_bias="0.472"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.111" />
+            app:layout_constraintVertical_bias="0.142" />
 
         <TextView
             android:id="@+id/txt_Topic1"
@@ -64,7 +64,7 @@
 
 
         <EditText
-            android:id="@+id/InputUsername"
+            android:id="@+id/inputamountitem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/custom_input"
@@ -72,7 +72,7 @@
             android:drawablePadding="10dp"
             android:ems="12"
             android:fontFamily="@font/kanit"
-            android:hint="Username"
+            android:hint="ชื่อผู้ใช้"
             android:inputType="textPersonName"
             android:minHeight="50dp"
             android:paddingStart="15dp"
@@ -93,17 +93,17 @@
             android:drawablePadding="10dp"
             android:ems="12"
             android:fontFamily="@font/kanit"
-            android:hint="Email"
+            android:hint="อีเมล"
             android:inputType="textPersonName"
             android:minHeight="50dp"
             android:paddingStart="15dp"
             android:paddingEnd="15dp"
             android:text=""
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/InputUsername"
+            app:layout_constraintEnd_toEndOf="@+id/inputamountitem"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/InputUsername"
-            app:layout_constraintTop_toBottomOf="@+id/InputUsername"
+            app:layout_constraintStart_toStartOf="@+id/inputamountitem"
+            app:layout_constraintTop_toBottomOf="@+id/inputamountitem"
             app:layout_constraintVertical_bias="0.073" />
 
         <EditText
@@ -115,7 +115,7 @@
             android:drawablePadding="10dp"
             android:ems="12"
             android:fontFamily="@font/kanit"
-            android:hint="Phone"
+            android:hint="เบอร์โทรศัพท์"
             android:inputType="numberDecimal"
             android:minHeight="50dp"
             android:paddingStart="15dp"
@@ -178,7 +178,7 @@
             android:layout_height="54dp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/app_name"
-            android:src="@drawable/register4"
+            android:src="@drawable/buttonregister"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
